# OpenChessRobot

./: .gitignore  LICENSE  README.md  build.sh
online_study/: README.txt  data_analysis.ipynb  data_process.ipynb
online_study/data_analysis/: Q7_annotated_three_scenarios.csv  Q7_annotated_three_scenarios_final.csv  README.txt  Scenario_A_Q5.csv  Scenario_A_Q7_Gemini.csv  Scenario_A_Q7_o3.csv  Scenario_B_Q6.csv  Scenario_B_Q7_Gemini.csv  Scenario_B_Q7_o3.csv  Scenario_C_Q7_Gemini.csv  Scenario_C_Q7_o3.csv  User+perception+of+a+talking+chess+robot_February+13,+2025_00.44.xlsx  User+perception+of+a+talking+chess+robot_February+13,+2025_00.44_597.csv  data_analysis.ipynb  prompt.txt
online_study/data_analysis/desensitized_data/: Desensitized_data_from_597_participants.csv  Q7_annotated_three_scenarios.csv  Q7_annotated_three_scenarios_final.csv  Q7_annotated_three_scenarios_llms+human.csv  Scenario_A_Q6.csv  Scenario_A_Q7.csv  Scenario_A_Q7_Gemini.csv  Scenario_A_Q7_o3.csv  Scenario_B_Q5.csv  (+8 more)
online_study/desensitized_data/: Q7_annotated_three_scenarios_llms.csv  Scenario_A_Q5.csv  Scenario_A_Q6.csv  Scenario_A_Q7.csv  Scenario_A_Q7_Gemini.csv  Scenario_B_Q5.csv  Scenario_B_Q6.csv  Scenario_B_Q7_o3.csv  Scenario_C_Q7_o3.csv
src/move_chess_panda/: CMakeLists.txt  package.xml  requirements.txt
src/open_chess_robot/: CMakeLists.txt  LICENSE  README.md  package.xml  requirements.freeze.txt  requirements.txt  setup.py
src/open_chess_robot/config/hardware/: fr3.yaml  panda.yaml
src/open_chess_robot/config/llm_commentary/: llm_commentary.yaml
src/open_chess_robot/config/llm_commentary/prompts/: multi_pv.txt  single_mv.txt
src/open_chess_robot/launch/: data_collection.launch  eva_chess.launch  hri_chess_exe.launch  hri_chess_pre.launch  moveit_fr3.rviz  moveit_panda.rviz
src/open_chess_robot/launch/includes/: franka_moveit.launch
src/open_chess_robot/scripts/: check_piece_offset.py  chess_commander.py  chess_robo_player.py  chess_robot_recovery.py  collect_board_corners.py  data_collect_chess_commander.py  data_collect_chess_robot.py  eva_chess_commander.py  eva_chess_robot.py  hri_chess_commander.py  hri_chess_robot.py  llm_chess_commander.py  llm_commentary_manager.py  ros_param_manager.py
src/open_chess_robot/scripts/chessrec/classifier/: __init__.py
src/open_chess_robot/scripts/chessrec/config/transfer_learning/occupancy_classifier/: ResNet.yaml
src/open_chess_robot/scripts/chessrec/config/transfer_learning/piece_classifier/: InceptionV3.yaml
src/open_chess_robot/scripts/chessrec/core/: __init__.py  statistics.py
src/open_chess_robot/scripts/chessrec/core/training/: train_classifier.py
src/open_chess_robot/scripts/chessrec/preprocessing/: __init__.py  gen_occ_data.py
src/open_chess_robot/scripts/chessrec/recognizer/: __init__.py  recognizer.py
src/open_chess_robot/scripts/engine/: wrapper.py
src/open_chess_robot/scripts/ocr_runtime/: __init__.py  board_geometry.py  board_recognition.py  camera_config.py  llm_clients.py  llm_commentary.py  logger.py  move_result.py  move_sequences.py  paths.py  piece_offset.py  recognition_augment.py  recognition_confidence.py  recognition_projection.py  script_imports.py  settings.py  startup_checks.py  tts_sinks.py
src/open_chess_robot/scripts/utili/: __init__.py  benchmark_model.ipynb  camera_config.py
src/open_chess_robot/scripts/utili/recap/: __init__.py  path_manager.py
src/open_chess_robot/test/: smoke_llm_commentary.py  test_check_piece_offset.py  test_command_result.py  test_configuration.py  test_llm_commentary.py  test_move_sequences.py  test_recognition.py  test_recognition_augment.py
supporting_materials/: Clip1.txt  Clip2.txt  Clip3.txt
(+64 files in other folders)
