<?xml version="1.0"?>
<package format="2">
  <name>open_chess_robot</name>
  <version>0.1.0</version>
  <description>
    ROS 1 nodes for Panda/FR3 chess manipulation, board recognition, game
    control, and human-robot interaction experiments.
  </description>

  <maintainer email="renchi.rz.zhang@gmail.com">Renchi Zhang</maintainer>
  <author>Renchi Zhang</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>actionlib_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_gripper</exec_depend>
  <exec_depend>franka_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>ros_tcp_endpoint</exec_depend>
  <exec_depend>shape_msgs</exec_depend>

  <test_depend>python3-nose</test_depend>

  <export />
</package>
